<?xml version="1.0" encoding="UTF-8"?>
<project
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>

   <parent>
      <artifactId>socialpm-parent</artifactId>
      <groupId>org.ocpsoft.socialpm</groupId>
      <version>1.0.0-SNAPSHOT</version>
   </parent>

   <artifactId>socialpm-gwt</artifactId>
   <packaging>war</packaging>
   <name>SocialPM - GWT</name>

   <properties>
      <slf4j.version>1.5.11</slf4j.version>
      <gwt.version>2.4.0</gwt.version>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>

   <dependencies>
   
      <dependency>
         <groupId>org.ocpsoft.socialpm</groupId>
         <artifactId>socialpm-model</artifactId>
      </dependency>
      
      <!-- Errai -->
      <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-user</artifactId>
         <version>${gwt.version}</version>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-javaee-all</artifactId>
         <version>${errai.version}</version>
      </dependency>
      
      <!-- Rewrite -->
      <dependency>
         <groupId>org.ocpsoft.rewrite</groupId>
         <artifactId>rewrite-impl-servlet</artifactId>
      </dependency>
      <dependency>
         <groupId>org.ocpsoft.rewrite</groupId>
         <artifactId>rewrite-integration-gwt</artifactId>
      </dependency>
      <dependency>
         <groupId>org.ocpsoft.logging</groupId>
         <artifactId>logging-adapter-slf4j</artifactId>
      </dependency>
      
      <!-- Security -->
      <dependency>
         <groupId>org.jboss.seam.security</groupId>
         <artifactId>seam-security</artifactId>
         <scope>compile</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.seam.security</groupId>
         <artifactId>seam-security-api</artifactId>
      </dependency>
      <dependency>
         <groupId>org.jboss.seam.transaction</groupId>
         <artifactId>seam-transaction</artifactId>
      </dependency>
      <dependency>
         <groupId>org.jboss.solder</groupId>
         <artifactId>solder-impl</artifactId>
      </dependency>
      <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
      </dependency>
      
      <!-- Java EE -->
      <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
         <version>4.0.1.Final</version>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.spec</groupId>
         <artifactId>jboss-javaee-6.0</artifactId>
         <type>pom</type>
         <scope>provided</scope>
      </dependency>

      <!-- Test Dependencies -->
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <scope>test</scope>
      </dependency>
   </dependencies>

   <build>
      <finalName>${project.artifactId}-${project.version}</finalName>
      <plugins>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>gwt-maven-plugin</artifactId>
            <version>${gwt.version}</version>
            <executions>
               <execution>
                  <goals>
                     <goal>resources</goal>
                     <goal>compile</goal>
                  </goals>
               </execution>
            </executions>
            <configuration>
               <logLevel>INFO</logLevel>
               <runTarget>http://localhost:8080/socialpm-gwt</runTarget>
               <extraJvmArgs>-Xmx2048m -XX:CompileThreshold=7000 -XX:+AggressiveOpts -XX:+UseCompressedOops -XX:MaxPermSize=128M</extraJvmArgs>
               <soyc>false</soyc>
               <noServer>true</noServer>
            </configuration>
         </plugin>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <source>1.6</source>
               <target>1.6</target>
            </configuration>
         </plugin>
      </plugins>

      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>org.eclipse.m2e</groupId>
               <artifactId>lifecycle-mapping</artifactId>
               <version>1.0.0</version>
               <configuration>
                  <lifecycleMappingMetadata>
                     <pluginExecutions>
                        <pluginExecution>
                           <pluginExecutionFilter>
                              <groupId>org.codehaus.mojo</groupId>
                              <artifactId>gwt-maven-plugin</artifactId>
                              <versionRange>[2.3.0,)</versionRange>
                              <goals>
                                 <goal>resources</goal>
                              </goals>
                           </pluginExecutionFilter>
                           <action>
                              <execute />
                           </action>
                        </pluginExecution>
                        <pluginExecution>
                           <pluginExecutionFilter>
                              <groupId>org.jboss.errai</groupId>
                              <artifactId>jacoco-gwt-maven-plugin</artifactId>
                              <versionRange>[0.0,)</versionRange>
                              <goals>
                                 <goal>prepare-agent</goal>
                              </goals>
                           </pluginExecutionFilter>
                           <action>
                              <ignore />
                           </action>
                        </pluginExecution>
                     </pluginExecutions>
                  </lifecycleMappingMetadata>
               </configuration>
            </plugin>
         </plugins>
      </pluginManagement>
   </build>

   <profiles>
      <profile>
         <id>jboss7</id>
         <activation>
            <activeByDefault>true</activeByDefault>
         </activation>
         <build>
            <plugins>
               <plugin>
                  <artifactId>maven-war-plugin</artifactId>
                  <version>2.2</version>
                  <configuration>
                     <packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
                     <outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
                     <archive>
                        <manifestEntries>
                           <Dependencies>org.jboss.as.naming,org.jboss.as.server,org.jboss.msc</Dependencies>
                        </manifestEntries>
                     </archive>
                  </configuration>
               </plugin>
               <plugin>
                  <groupId>org.jboss.as.plugins</groupId>
                  <artifactId>jboss-as-maven-plugin</artifactId>
                  <version>7.1.0.CR1</version>
                  <extensions>false</extensions>
               </plugin>
            </plugins>
         </build>

         <dependencies>
         </dependencies>
      </profile>
   </profiles>
</project>
